@@ -1,3 +1,9 @@
+2012-12-10  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
+	* sigproc.h (sig_send): Accept tid as argument #3.  Default to NULL.
+	* sigproc.cc (sig_send): Ditto.  Pass tid to other sig_send.
+	(sigpending): Send current thread as arg #3.
+
 2012-12-07  Christopher Faylor  <me.cygwin2012@cgf.cx>
 
 	* exceptions.cc (sigpacket::process): Reorganize to avoid use of tls
